@@ -15,8 +15,9 @@ my $dia = Music::FretboardDiagram->new(
     #font     => '/path/to/TTF/font.ttf',
     tuning   => [qw/A E C G/],
     horiz    => 1,
-    grid     => 'gray',
     verbose  => 1,
+    string_color => 'blue',
+    fret_color   => 'darkgray',
 );
 
 $dia->draw();
