@@ -1,6 +1,7 @@
 Revision history for Music-FretboardDiagram
 
 {{$NEXT}}
+    - Draw the strings and frets with separate colors.
 
 0.1102 2019-03-09 13:25:11
     - Hide ugly, reused syntax in the ->_note_at method.
